feat: add admin link to web

--- a/Web/index.html
+++ b/Web/index.html
@@ -28,6 +28,21 @@
         max-width: 520px;
         margin: 0 auto;
       }
+      .cta {
+        display: inline-block;
+        margin: 24px 0 6px;
+        padding: 12px 22px;
+        background: #2a241f;
+        color: #f6f1e7;
+        text-decoration: none;
+        border-radius: 999px;
+        font-size: 14px;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+      }
+      .cta:hover {
+        background: #1b1714;
+      }
       .tag {
         display: inline-block;
         margin-top: 20px;
@@ -45,6 +60,7 @@
       <div>
         <h1>Einstore</h1>
         <p>Static landing site deployed on DigitalOcean App Platform. Domains and DB will be configured next.</p>
+        <a class="cta" href="https://admin.einstore.pro">Go to Admin</a>
         <div class="tag">setup in progress</div>
       </div>
     </main>
